--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -100,8 +100,7 @@ const shareImage = new URL(post.data.image, Astro.site).href;
               rel="noopener noreferrer"
               aria-label="Chia sẻ lên Facebook"
             >
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v2.385z"/></svg>
-            </a>
+              <i class="fa-brands fa-facebook-f"></i>
             <a 
               href={`https://pinterest.com/pin/create/button/?url=${currentUrl}&media=${shareImage}&description=${post.data.title}`}
               class="share-btn pinterest" 
@@ -109,7 +108,7 @@ const shareImage = new URL(post.data.image, Astro.site).href;
               rel="noopener noreferrer"
               aria-label="Ghim lên Pinterest"
             >
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-0.091 19.34c-1.304 0-2.464-.812-2.812-2.006l-.994-3.842c-.22-.851.385-1.656 1.193-1.656.551 0 .807.412.807.91s-.312 1.337-.465 1.931c-.156.612.304 1.125.9 1.125.994 0 1.742-1.222 1.742-2.854 0-2.522-1.771-4.444-4.225-4.444-3.132 0-5.237 2.37-5.237 5.045 0 1.222.427 2.487 1.106 3.109.111.1.128.24.088.375l-.2 1.051c-.04.212-.174.253-.335.152-1.291-.812-2.062-2.37-2.062-4.148 0-3.616 2.91-6.762 7.029-6.762 3.73 0 6.364 2.656 6.364 6.138 0 3.744-2.152 6.333-5.223 6.333z"/></svg>
+              <i class="fa-brands fa-pinterest"></i>
             </a>
           </div>
 
@@ -118,7 +117,7 @@ const shareImage = new URL(post.data.image, Astro.site).href;
               <h3>Bạn đang tìm kiếm câu trả lời?</h3>
               <p>Hãy để những lá bài Tarot soi sáng con đường của bạn. Trải nghiệm một phiên đọc bài cá nhân hoá ngay hôm nay.</p>
             </div>
-            <a href="/boi-tarot-online" class="cta-button">Trải Bài Ngay</a>
+            <a href="/tarot" class="cta-button">Trải Bài Ngay</a>
           </div>
 
           <div class="related-posts">
