--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -92,7 +92,7 @@ const ogImageURL = new URL(ogImage, Astro.site);
                  </div>
             </div>
             <a href="/about-us" class="nav-link">Về chúng tôi</a> <a href="/blog" class="nav-link">Blogs</a>
-            <a href="/#contact" class="nav-link">Liên hệ</a> <a href="#" id="history-nav-link" class="nav-link">Lịch sử</a>
+            <a href="/contact" class="nav-link">Liên hệ</a> <a href="#" id="history-nav-link" class="nav-link">Lịch sử</a>
         </div>
         <button class="nav-toggle" id="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
