--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -143,7 +143,7 @@ const ogImageURL = new URL(ogImage, Astro.site);
                             <a href="/about-us">Giới thiệu</a>
                         </li>
                         <li>
-                            <a href="index.html#contact">Liên hệ</a>
+                            <a href="/contact">Liên hệ</a>
                         </li>
                         <li>
                             <a href="/privacy-policy">Chính sách bảo mật</a>
