--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const schema = {
                         </p>
                         <a href="/tarot" class="btn-primary">Xem Tarot Ngay</a>
                     </div>
-                    <div>
+                    <div style="display:flex;">
                         <img src="/wheel.png" alt="Vòng tròn Zodiac" class="section-image spinning-wheel" style="max-width: 400px; margin: auto; border-radius: 50%;">
                     </div>
                 </div>
