--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -91,7 +91,7 @@ const ogImageURL = new URL(ogImage, Astro.site);
                     <a href="/zodiac-daily" class="nav-link submenu-link">Zodiac Tarot</a>
                  </div>
             </div>
-            <a href="/about-us" class="nav-link">Về chúng tôi</a> <a href="#" class="nav-link">Blogs</a>
+            <a href="/about-us" class="nav-link">Về chúng tôi</a> <a href="/blog" class="nav-link">Blogs</a>
             <a href="/contact" class="nav-link">Liên hệ</a> <a href="#" id="history-nav-link" class="nav-link">Lịch sử</a>
         </div>
         <button class="nav-toggle" id="nav-toggle" aria-label="toggle navigation">
