--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -417,7 +417,7 @@ const shareImage = new URL(post.data.image, Astro.site).href;
         font-size: 2rem;
       }
       #post-content {
-        font-size: 1rem;
+        font-size: 18px;
       }
       /* (MỚI) Giảm max-width ảnh trong bài viết */
       #post-content :global(img) {
